# pygame-pilot

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: prince_of_persia.json
pygamepilot/: __init__.py  bootstrap.py  cli.py  patches.py  server.py
tests/: app_square.py  test_pilot.py
